--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
 DB_URL=mongodb+srv://root:root@cluster0.wd7izsp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_ACCESS_SECRET=jwt-secret-key
